--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -32,6 +32,7 @@
      "paths": {
       "@shared/*": ["src/shared/*"],
       "@users/*": ["src/users/*"],
+      "@artists/*": ["src/artists/*"],
       "@config/*": ["src/config/*"],
       "@authentication/*": ["src/authentication/*"]
      },                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
