--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -34,7 +34,9 @@
       "@users/*": ["src/users/*"],
       "@artists/*": ["src/artists/*"],
       "@config/*": ["src/config/*"],
-      "@authentication/*": ["src/authentication/*"]
+      "@authentication/*": ["src/authentication/*"],
+      "@userPublications/*": ["src/userPublications/*"],
+      "@publicationImages/*": ["src/publicationImages/*"]
      },                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
      // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
      // "typeRoots": [],                                  /* Specify multiple folders that act like './node_modules/@types'. */
