--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -15,3 +15,8 @@ JWT_EXPIRES_IN='5m'
 REFRESH_TOKEN_SECRET=
 REFRESH_EXPIRES_IN="30m"
 REFRESH_DURATION=1800000
+
+# Docker
+DB_USERNAME=
+DB_PASSWORD=
+DB_DATABASE=
