--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -36,7 +36,8 @@
       "@config/*": ["src/config/*"],
       "@authentication/*": ["src/authentication/*"],
       "@userPublications/*": ["src/userPublications/*"],
-      "@publicationImages/*": ["src/publicationImages/*"]
+      "@publicationImages/*": ["src/publicationImages/*"],
+      "@applications/*": ["src/applications/*"]
      },                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
      // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
      // "typeRoots": [],                                  /* Specify multiple folders that act like './node_modules/@types'. */
