--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/shared/http/server.ts",
-    "postdocker-up": "sleep 2 && npm run typeorm -- -d ./src/shared/typeorm/connect.ts migration:run", 
+    "postdocker-up": "sleep 2 && npm run typeorm -- -d ./src/shared/typeorm/connect.ts migration:run",
     "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
     "docker:start": "docker-compose up -d",
     "start:dev": "npm run docker:start && npm run postdocker-up && npm run dev",
-    "docker-down": "docker-compose -f docker-compose.yml down" 
+    "docker-down": "docker-compose -f docker-compose.yml down",
+    "prepare": "husky"
   },
   "repository": {
     "type": "git",
@@ -42,6 +43,8 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
@@ -49,11 +52,8 @@
     "@types/multer": "^1.4.11",
     "@types/swagger-ui-express": "^4.1.6",
     "@types/uuid": "^9.0.8",
-    "@typescript-eslint/eslint-plugin": "^7.9.0",
-    "@typescript-eslint/parser": "^7.9.0",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
+    "globals": "^15.4.0",
+    "husky": "^9.0.11",
     "prettier": "^3.2.5",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0"
