--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/multer": "^1.4.11",
     "@types/swagger-ui-express": "^4.1.6",
     "@types/uuid": "^9.0.8",
+    "branch-name-lint": "^2.1.1",
     "globals": "^15.4.0",
     "husky": "^9.0.11",
     "prettier": "^3.2.5",
