--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "docker:start": "docker-compose up -d",
     "start:dev": "npm run docker:start && npm run postdocker-up && npm run dev",
     "docker-down": "docker-compose -f docker-compose.yml down",
-    "prepare": "husky"
+    "prepare": "husky",
+    "eslint": "npx eslint src"
   },
   "repository": {
     "type": "git",
@@ -45,6 +46,7 @@
   "devDependencies": {
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
+    "@eslint/js": "^9.4.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
@@ -53,9 +55,11 @@
     "@types/swagger-ui-express": "^4.1.6",
     "@types/uuid": "^9.0.8",
     "branch-name-lint": "^2.1.1",
+    "eslint": "^9.4.0",
     "globals": "^15.4.0",
     "husky": "^9.0.11",
     "ts-node-dev": "^2.0.0",
-    "tsconfig-paths": "^4.2.0"
+    "tsconfig-paths": "^4.2.0",
+    "typescript-eslint": "^7.13.0"
   }
 }
