--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,9 @@
 {
-    "singleQuote": false,
-    "semi": true
+   "semi": true,
+   "trailingComma": "all",
+   "singleQuote": true,
+   "tabWidth": 4,
+   "printWidth": 100,
+   "arrowParens": "avoid"
 }
+
