--- a/package.json
+++ b/package.json
@@ -55,9 +55,10 @@
     "@types/swagger-ui-express": "^4.1.6",
     "@types/uuid": "^9.0.8",
     "branch-name-lint": "^2.1.1",
-    "eslint": "^9.4.0",
+    "eslint": "^8.56.0",
     "globals": "^15.4.0",
     "husky": "^9.0.11",
+    "prettier": "3.3.2",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
     "typescript-eslint": "^7.13.0"
