--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,9 @@
 {
-   "semi": true,
-   "trailingComma": "all",
-   "singleQuote": true,
-   "tabWidth": 4,
-   "printWidth": 100,
-   "arrowParens": "avoid"
+    "semi": true,
+    "trailingComma": "all",
+    "singleQuote": false,
+    "tabWidth": 4,
+    "printWidth": 100,
+    "arrowParens": "avoid"
 }
 
