--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
         "express": "^4.18.2",
         "express-async-errors": "^3.1.1",
         "jsonwebtoken": "^9.0.2",
+        "moment": "^2.30.1",
+        "morgan-body": "^2.6.9",
         "multer": "^1.4.5-lts.1",
         "pg": "^8.11.3",
         "reflect-metadata": "^0.2.1",
@@ -41,7 +43,8 @@
         "typeorm": "^0.3.20",
         "typescript": "^5.3.3",
         "undefined": "^0.1.0",
-        "uuid": "^9.0.1"
+        "uuid": "^9.0.1",
+        "winston": "^3.13.0"
     },
     "devDependencies": {
         "@commitlint/cli": "^19.3.0",
